Make sure timeago text doesn't break in multiple lines

--- a/app/assets/stylesheets/pages/pipelines.scss
+++ b/app/assets/stylesheets/pages/pipelines.scss
@@ -161,6 +161,7 @@
   .finished-at {
     color: $table-text-gray;
     margin: 4px 0;
+    white-space: nowrap;
 
     .fa {
       font-size: 12px;
